--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 #extensions = buildout.bootstrap mr.developer
 extends = http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
-package-name = inigo.containerattachment
+package-name = inigo.redirecttocontainer
 parts = omelette scripts
 sources-dir = dev
 find-links +=
@@ -18,7 +18,7 @@ inigo.templer = 1.4
 [test]
 recipe = zc.recipe.testrunner
 defaults = ['--tests-pattern', '^f?tests$', '-v']
-eggs = inigo.containerattachment [test]
+eggs = inigo.redirecttocontainer [test]
 
 [omelette]
 recipe = collective.recipe.omelette
@@ -33,4 +33,4 @@ eggs =
     inigo.templer
     PasteScript
     zest.releaser
-    inigo.containerattachment
+    inigo.redirecttocontainer
